--- a/email-assistant-frontend/public/manifest.json
+++ b/email-assistant-frontend/public/manifest.json
@@ -1,22 +1,32 @@
 {
-    "manifest_version": 3,
-    "name": "AI Email Assistant",
-    "version": "1.0.0",
-    "description": "Generate professional emails using PACT framework",
-    "action": {
-      "default_popup": "index.html",
-      "default_icon": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
-      }
-    },
-    "permissions": [
-      "activeTab"
-    ],
-    "icons": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+  "manifest_version": 3,
+  "name": "AI Email Assistant",
+  "version": "1.0.0",
+  "description": "Generate professional emails using PACT framework",
+  "action": {
+    "default_popup": "index.html",
+    "default_icon": {
+      "16": "/icons/icon16.png",
+      "48": "/icons/icon48.png",
+      "128": "/icons/icon128.png"
     }
+  },
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ],
+  "host_permissions": [
+    "https://mail.google.com/*"
+  ],
+  "content_scripts": [
+    {
+      "matches": ["https://mail.google.com/*"],
+      "js": ["content.js"]
+    }
+  ],
+  "icons": {
+    "16": "/icons/icon16.png",
+    "48": "/icons/icon48.png",
+    "128": "/icons/icon128.png"
   }
+}
