--- a/email-assistant-frontend/public/manifest.json
+++ b/email-assistant-frontend/public/manifest.json
@@ -16,7 +16,8 @@
   },
   "permissions": [
     "activeTab",
-    "scripting"
+    "scripting",
+    "storage" 
   ],
   "host_permissions": [
     "https://mail.google.com/*"
