--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ email-assistant-backend/.env
 /email-assistant-backend/venv
 /email-assistant-backend/venv
 /email-assistant-backend/venv
+/email-assistant-backend/venv
