--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ email-assistant-backend/.env
 /email-assistant-backend/venv
 /email-assistant-backend/venv
 /email-assistant-backend/venv
+/email-assistant-backend/venv
