--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ email-assistant-backend/venv
 /email-assistant-backend/venv
 /email-assistant-backend/venv
 /email-assistant-backend/venv
+/email-assistant-backend/__pycache__
