--- a/email-assistant-frontend/public/manifest.json
+++ b/email-assistant-frontend/public/manifest.json
@@ -2,22 +2,19 @@
   "manifest_version": 3,
   "name": "AI Email Assistant",
   "version": "1.0.0",
-  "description": "Generate professional emails using PACT framework",
+  "description": "Generate professional emails using AI",
   "action": {
     "default_popup": "index.html",
     "default_icon": {
       "16": "/icons/icon16.png",
-      "48": "/icons/icon48.png",
+      "48": "/icons/icon48.png", 
       "128": "/icons/icon128.png"
     }
-  },
-  "background": {
-    "service_worker": "background.js"
   },
   "permissions": [
     "activeTab",
     "scripting",
-    "storage" 
+    "storage"
   ],
   "host_permissions": [
     "https://mail.google.com/*"
